<resources>
    <string name="app_name">NavigationMenu</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="setting">Setting</string>
    <string name="hello_setting_fragment">Hello Setting Fragment</string>
    <string name="hello_profile_fragment">Hello Profile Fragment</string>
    <string name="hello_home_fragment">Hello Home Fragment</string>
    <string name="hello_favorite_fragment">Hello Favorite Fragment</string>
    <string name="user_id">User ID</string>
    <string name="id">ID</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="user_id_detail">User ID</string>
    <string name="id_detail">ID</string>
    <string name="title_detail">Title</string>
    <string name="body_detail">Body</string>
    <string name="add_favorite">Add Favorite</string>
    <string name="delete_post">Delete Post</string>
</resources>